fix spacing issue

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -527,7 +527,8 @@ a {
         font-family: inherit;
         font-size: 1.3rem;
         left: 5px;
-        padding: 0.5rem 0;
+        padding-bottom: 0.75rem;
+        padding-top: 0.25rem;
         position: relative;
         top: 5px;
         transition: color $transition-time;
